m1-gke-ingress/kubernetes-gke/deployment.yaml
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magellan-nbi
  namespace: magellan
  labels:
    app: magellan-nbi
spec:
  replicas: 2 # 3 will need extra quota
  selector:
    matchLabels:
      app: magellan-nbi
  template:
    metadata:
      labels:
        app: magellan-nbi
    spec:
      containers:
        - name: biometric-nbi #https://hub.docker.com/repository/docker/obrienlabs/magellan-nbi/tags
         #image: obrienlabs/magellan-nbi:0.0.3-ia64
          image: us-east4-docker.pkg.dev/biometric-backend-gke-man-old/magellan-nbi/magellan-nbi:0.0.4-ia64
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /nbi/actuator/health # Spring Boot Actuator liveness endpoint
              port: 8080
            initialDelaySeconds: 30 # Time to wait before first probe
            periodSeconds: 10 # How often to perform the probe
            failureThreshold: 3 # Number of consecutive failures to consider container unhealthy
          readinessProbe:
            httpGet:
              path: /nbi/actuator/health #/nbi/app/health 
              port: 8080
            initialDelaySeconds: 15 
            periodSeconds: 5
            failureThreshold: 3
