m1-gke-ingress/kubernetes-gke/service.yaml
#
apiVersion: v1
kind: Service
metadata:
  name: magellan-nbi
  namespace: magellan
  labels:
    app: magellan-nbi
spec:
  type: NodePort
  selector:
    app: magellan-nbi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
