m1-gke-ingress/kubernetes-gke/ingress.yaml
# see https://github.com/ObrienlabsDev/gcp-infrastructure-as-code/issues/10
# see https://cloud.google.com/kubernetes-engine/docs/how-to/load-balance-ingress#gcloud
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: magellan-nbi
  namespace: magellan
  annotations:
    #kubernetes.io/ingress.global-static-ip-name: magellan-obrienlabs-dev-ip
    #networking.gke.io/managed-certificates: managed-cert
    # If the class annotation is not specified it defaults to "gce" - GKE continues to use this deprecated annotation
    kubernetes.io/ingress.class: "gce"
    #spec.ingressClassName: "gce" # do not use
spec:
#  defaultBackend:
#    service:
#      name: magellan-nbi
#      port:
#        number: 8080
  rules:
  - http:
      paths:
      - path: /  # * # https://docs.cloud.google.com/kubernetes-engine/docs/how-to/load-balance-ingress#paths
        pathType: ImplementationSpecific #Prefix, Exact
        backend:
          service:
            name: magellan-nbi
            port:
              number: 8080
